fix alignment

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ hr {
 .link {
     box-sizing: border-box;
     text-decoration: none;
-    padding: 1rem 1rem;
+    padding:0.5rem;
     text-align: center;
 }
 
@@ -99,7 +99,10 @@ hr {
 }
 
 /** header **/
-
+.sticky-nav{
+    position: sticky;
+    top: 0;
+}
 .hero {
     padding: 2rem;
     padding-top: 5rem;
@@ -127,6 +130,12 @@ hr {
     margin-left:70%;
     margin-top: -70px;
 }
+.align-left{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
 
 /** sections **/
 
@@ -146,17 +155,17 @@ hr {
         display: block;
         max-width: 140px;
         margin: 1rem 1rem 1rem 0rem;
-        margin-left:40%;
     }
     
     .link-secondary {
         color: var(--primary-color);
         border-radius: 2rem;
-        border: 1px solid var(--primary-color);
         display: block;
         max-width: 140px;
         margin: 1rem 1rem 1rem 0rem;
-        margin-left:40%;
+    }
+    .align-left{
+        justify-content: flex-end;
     }
 }
 div>small,article>small{
